syntax = "proto3";

package gateway;

service ReportService {
  rpc GetReport(GetReportRequest) returns (GetReportResponse);
  rpc ListReports(ListReportsRequest) returns (ListReportsResponse);
}

message Report {
  string report_id = 1;
  string report_name = 2;
  string report_type = 3;
  string generated_at = 4;
  string content = 5;
  string status = 6;
}

message GetReportRequest {
  string report_id = 1;
}

message GetReportResponse {
  Report report = 1;
}

message ListReportsRequest {
  string report_type = 1;
  string start_date = 2;
  string end_date = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ListReportsResponse {
  repeated Report reports = 1;
}
